[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project]
name = "myrmex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.10.11",
    "aiohttp-socks>=0.10.1",
    "result>=0.17.0",
    "stem>=1.8.2",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = [
    "README.md",
    "LICENSE",
    "tinybridge",
    "tests",
]

[tool.hatch.build.targets.wheel]
only-include = ["tinybridge", "LICENSE", "README.md"]
